# ThalosPrime-v1

./: .env.example  .gitignore  AUTO_WEB_DEPLOY_IMPLEMENTATION.md  BUILD_COMPLETE.md  CHANGELOG.md  COMPLETE_IMPLEMENTATION_REPORT.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_READY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  OWNERSHIP.md  README.md  README_V3.md  SETUP.md  THALOS-PRIME-LICENSE.txt  auto_deploy.bat  auto_deploy.py  auto_deploy.sh  auto_web_deploy.bat  auto_web_deploy.py  auto_web_deploy.sh  boot_thalos.py  conftest.py  coverage.xml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  setup.py  test_chatbot.py  test_integration.py  test_system.py  thalos_prime.py  validate_build.py
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  COPYRIGHT_IMPLEMENTATION.md  COPYRIGHT_REGISTRATION.md  DEPLOYMENT.md  ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MODULE_DEPENDENCIES.md  ROADMAP.md
src/: __init__.py  main.py
src/ai/: __init__.py
src/ai/learning/: __init__.py  hebbian_learner.py  reinforcement_learner.py
src/ai/neural/: __init__.py  bio_neural_network.py
src/ai/optimization/: neural_optimizer.py  predictive_analytics.py
src/ai/perception/: __init__.py  pattern_recognizer.py
src/ai/reasoning/: __init__.py  advanced_reasoning.py  inference_engine.py  logic_engine.py
src/biointerface/: __init__.py  bio_digital_bridge.py
src/codegen/: __init__.py  generator.py
src/core/: __init__.py  config.py  exceptions.py  logging.py  utils.py
src/core/cis/: __init__.py  controller.py  orchestrator.py  validator.py
src/core/memory/: __init__.py  advanced_memory.py  storage.py
src/core/sbi/: __init__.py  sbi_controller.py
src/database/: __init__.py  connection_manager.py
src/interfaces/: __init__.py
src/interfaces/api/: __init__.py  server.py
src/interfaces/chatbot/: __init__.py  conversation.py
src/interfaces/cli/: __init__.py  cli.py
src/interfaces/web/: __init__.py  action_handler.py  immersive_server.py  nlp_processor.py  web_server.py
src/interfaces/web/static/css/: matrix-style.css
src/interfaces/web/static/js/: chat-interface.js  matrix-rain.js  neural-visualizer.js
src/interfaces/web/templates/: index.html  thalos_immersive.html
src/monitoring/: __init__.py  system_monitor.py
src/wetware/: __init__.py  life_support.py  mea_interface.py  organoid_core.py
tests/: __init__.py
tests/integration/: __init__.py  test_lifecycle.py
tests/unit/: __init__.py  test_ai_modules.py  test_cis.py  test_core_utils.py  test_memory.py
